Passion structure much more laid out

--- a/src/index.html
+++ b/src/index.html
@@ -194,9 +194,13 @@
             <button>Ending LGBTQ+ Discrimination</button>
         </a>
     </nav>
-
-    <div id="mapWrap">
-
+    <div id="passionContainer">
+        <div id="mapNav">
+            
+        </div>
+        <div id="mapWrap">
+    
+        </div>
     </div>
   </div>
 
