map nav more polished + switched to wikimedia basemap

--- a/src/index.html
+++ b/src/index.html
@@ -145,7 +145,7 @@
   </div>
 
   <div id="pickYouPassionWrap">
-    <nav id="pickYouPassionNav">
+    <nav id="pickYourPassionNav">
         <a class="pickYourPassionOpt" id="repJustic">
             <img src="assets/reproductiveJustice.svg">
 
@@ -195,12 +195,14 @@
         </a>
     </nav>
     <div id="passionContainer">
+        <div id="topPassionBorder" class="border"></div>
         <div id="mapNav">
             
         </div>
         <div id="mapWrap">
     
         </div>
+        <div id="bottomPassionBorder" class="border"></div>
     </div>
   </div>
 
