More menu behavior

--- a/src/index.html
+++ b/src/index.html
@@ -152,7 +152,7 @@
             <button>Reproductive Justice</button>
         </a>
 
-        <a class="pickYourPassionOpt" id="svil">
+        <a class="pickYourPassionOpt" id="sVil">
             <img src="assets/sexualviolence.svg">
 
             <button>Ending Sexual Violence</button>
