Now grabbing Leaflet's stylesheet over HTTPS

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <title>Getting Started</title>
 
     <link rel="stylesheet" href="<%=htmlWebpackPlugin.files.chunks.main.css %>">
-    <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet/v1.5.1/leaflet.css" />
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.5.1/dist/leaflet.css" />
 
     <script src="https://kit.fontawesome.com/a31625db37.js"></script>
 </head>
