Added some polish to the map

--- a/src/index.html
+++ b/src/index.html
@@ -194,6 +194,8 @@
             <button>Ending LGBTQ+ Discrimination</button>
         </div>
     </nav>
+    
+    <a id="mapTop"></a>
     <div id="passionContainer">
         <div id="topPassionBorder" class="border"></div>
         <div id="mapNav">
