--- a/src/index.html
+++ b/src/index.html
@@ -147,25 +147,25 @@
   <div id="pickYouPassionWrap">
     <nav id="pickYourPassionNav">
         <div class="pickYourPassionOpt" id="repJustic">
-            <img src="assets/reproductiveJustice.svg">
+            <img src="assets/repJustic.svg">
 
             <button>Reproductive Justice</button>
         </div>
 
         <div class="pickYourPassionOpt" id="sVil">
-            <img src="assets/sexualviolence.svg">
+            <img src="assets/sVil.svg">
 
             <button>Ending Sexual Violence</button>
         </div>
 
         <div class="pickYourPassionOpt" id="envProtection">
-            <img src="assets/environmentalProtection.svg">
+            <img src="assets/envProtection.svg">
 
             <button>Environmental Protection</button>
         </div>
 
         <div class="pickYourPassionOpt" id="artsExpr">
-            <img src="assets/artsAndCreativeExpression.svg">
+            <img src="assets/artsExpr.svg">
 
             <button>Arts & Creative Expression</button>
         </div>
@@ -177,13 +177,13 @@
         </div>
 
         <div class="pickYourPassionOpt" id="mhAwareness">
-            <img src="assets/mentalHealthAwareness.svg">
+            <img src="assets/mhAwareness.svg">
 
             <button>Mental Health Awareness</button>
         </div>
 
         <div class="pickYourPassionOpt" id="immAccess">
-            <img src="assets/immigrationAccess.svg">
+            <img src="assets/immAccess.svg">
         
             <button>Immigration Access</button>
         </div>
