Didn't mean to dev on master/styles

--- a/src/index.html
+++ b/src/index.html
@@ -23,9 +23,9 @@
   <div id="directorsWrap">
       <ul id="directors">
           <li class="homeDirector" id="aboutUsDirector">
-              <div class="imgWrap">
+              <!-- <div class="imgWrap"> -->
                   <img src="assets/wwaLogo.svg" alt="About Us Graphic">
-              </div>
+              <!-- </div> -->
 
               <div id="Who We Are" class="txtWrap">
                   <h1> Who We Are </h1>
@@ -38,9 +38,9 @@
           </li
 
           ><li class="homeDirector" id="ourMissionDirector">
-              <div class="imgWrap">
+              <!-- <div class="imgWrap"> -->
                   <img src="assets/wwdLogo.svg" alt="Our Mission Graphic">
-              </div>
+              <!-- </div> -->
 
               <div id="What We Do" class="txtWrap">
                   <h1> What We Do </h1>
@@ -53,9 +53,9 @@
           </li
 
           ><li class="homeDirector" id="ourPartners">
-              <div class="imgWrap">
+              <!-- <div class="imgWrap"> -->
                   <img src="assets/partnersLogo.svg" alt="Our Partner's Graphic">
-              </div>
+              <!-- </div> -->
 
               <div id="Our Partners" class="txtWrap">
                   <h1> Our Partners </h1>
