Accidentally updated styles on master

--- a/src/index.html
+++ b/src/index.html
@@ -233,6 +233,7 @@
             </div>
 
             <div id="contactUsFormWrap">
+                <h1 id="contactTitle">Contact Us</h1>
                 <form>
                     <label for="Name">Name</label>
 
@@ -245,7 +246,10 @@
                     <label for="Name">Message</label>
 
                     <textarea placeholder="Your Message" id="messageInput"></textarea>
+
+                    <button><h1>Submit</h1></button>
                 </form>
+
             </div>
         </div>
     </div>
