Buttons with icons now actually fixed

--- a/src/index.html
+++ b/src/index.html
@@ -124,7 +124,7 @@
                         </p>
         
                         <button id="readMoreAd">
-                            Read More
+                            <h1>Read More</h1>
                             <i class="fas fa-arrow-right"></i>
                         </button>
                     <!-- </section> -->
